mule-user-guide/v/3.9/mel-cheat-sheet.adoc
=  MEL备忘单
:keywords: mel, cheat, sheet, mule expression language, variable, flow

以下文件重现原始内容
link:_attachments/refcard-mel.pdf[Mule表达语言（MEL）参考卡]。
另请参阅 link:/mule-user-guide/v/3.9/mule-expression-language-reference[Mule表达式语言参考]。

== 先决条件

本文假定您熟悉
link:/mule-user-guide/v/3.9/mule-expression-language-mel[骡子表达语言（MEL）]。

== 服务器，Mule，应用程序和消息变量

概述全局上下文以及它们赋予访问权限的变量。

[%header%autowidth.spread]
|===
| {服务器{1}}骡 |应用 |消息
| {fileSeparator {1}}丛集编号 | {编码{3}} ID
| {主机{1}}家 | {名称{3}} rootId
| {IP {1}}的NodeId  | {独立{3}}的correlationID
| {区域设置{1}}版本 |的workDir  | correlationSequence
| {javaVersion {1}} | {注册表{3}} correlationGroupSize
| {javaVendor {1}} |  |的replyTo
| {OSNAME {1}} |  |的dataType
| {osArch {1}} |  |有效载荷
| {OSVERSION {1}} |  | inboundProperties
| {systemProperties {1}} |  | inboundAttachments
| {的timeZone {1}} |  | outboundProperties
| {TMPDIR {1}} |  | outboundAttachments
| {userName的{1}} |  |例外
| {USERHOME {1}} |  |
| {USERDIR {1}} |  |
|===

在系统的临时目录中创建一个名为`target`的目录，并将有效负载设置为存储该文件对象的变量：

[source, xml, linenums]
----
<expression-component>
    targetDir = new java.io.File(server.tmpDir, 'target');
    targetDir.mkdir();
    payload = targetDir
</expression-component>
----

根据入站消息属性，在运行时设置HTTP请求的用户名和密码：

[source, xml, linenums]
----
<http:request-config name="HTTP_Request_Configuration" host="api.acme.com/v1" port="8081" doc:name="HTTP">
  <{{0}}" password="#[message.inboundProperties.password]"/>
  </http:request-config>

  <flow>
    ...
    <http:request config-ref="request-config" path="users" doc:name="HTTP Connector"/>
    ...
  </flow>
----

== 变量，整数和字符串

Mule接受`\#[payload]`作为表达式，而不是`#[message.payload]`，因为它知道自动评估消息上下文对象的表达式。此快捷方式仅适用于`payload`字段。

*  Mule假定Mule Expression中包含的任何未加引号的字符串是一个流变量。要将流变量'foo'的值设置为'bar'，表达式`#[foo == bar]`实际上会评估为：
+
[source, code]
----
#[flowVars.foo == flowVars.bar]
----

* 要访问流变量，请使用以下表达式之一：
+
[source, code]
----
#[flowVars.foo]
----
+
[source, code]
----
#[foo]
----

* 创建一个整数：
+
[source, code]
----
#[12]
----
+
* 创建一个字符串：
+
[source, code]
----
#['mystring']
----

== 流和会话变量

*Flow variables*在`flowVars`上下文中可用，或直接作为顶级变量（除非autoResolveVariables为false或其名称违反MEL命名约定）。会话变量可通过流，应用程序甚至服务器访问。您可以使用 link:/mule-user-guide/v/3.9/session-variable-transformer-reference[会话变量变换器]设置会话变量。

以下显示了如何根据通过getTargetService（）访问器从bean有效载荷中获取值创建的名称，从注册表中动态检索bean：

[source, xml, linenums]
----
<set-variable variableName="beanName" value="#[message.payload.targetService+'Processor']" />
<set-variable variableName="bean" value="#[app.registry[beanName]]" />
----

== 有效负载和附件

将当前有效负载复制到名为`originalPayload`的流变量中，然后将其恢复：

[source, xml, linenums]
----
<set-variable variableName="originalPayload" value="#[message.payload]" />
<set-payload value="#[flowVars['originalPayload']]" />
----

要使用Mule的自动转换功能以特定格式检索邮件有效内容，请使用`payloadAs`：

[source, xml]
----
<logger message="#[message.payloadAs(java.lang.String)]" />
----

要提取所有*.txt and * .xml附件，请使用过滤投影：

[source, xml, linenums]
----
<expression-transformer expression="#[($.value in  message.inboundAttachments.entrySet() if $.key ~= '(.*\\.txt|.*\\.xml)')]" />
----

要求空载有效载荷：

[source, code]
----
#[payload is NullPayload]
----

== 正则表达式支持

正则表达式帮助函数根据匹配检索`null`，一个值或一组值。采用`melExpression`参数的表单将正则表达式应用于其评估结果而不是`message.payload`。有关更多信息，请参阅 link:/mule-user-guide/v/3.9/mule-expression-language-reference#regex[MEL正则表达式]。

[source, code]
----
#[regex(regularExpression [, melExpression [, matchFlags]])]
----

例如，要选择以`To:`，`From:`或`Cc:`开头的所有有效内容行，请使用：

[source, code]
----
#[regex('^(To|From|Cc):')]
----

==  XPath3支持

XPath3辅助函数可以返回一个DOM节点，或DOM节点或文本的集合。
有关更多信息，请参阅 link:/mule-user-guide/v/3.9/xpath[XPath的]和
link:/mule-user-guide/v/3.9/mule-expression-language-reference#xpath[MEL XPath]。
默认情况下，除非指定了`xmlElement`，否则将在`message.payload`上评估XPath3表达式：

[source, code]
----
xpath3(xPathExpression [, xmlElement])
----

获取元素或属性的文本内容：

[source, code, linenums]
----
#[xpath3('//title').text]
#[xpath3('//title/@id').value]
----

==  JSON处理

MEL没有直接支持JSON。 `json-to-object-transformer`可以将JSON负载转换为简单数据结构的层次结构，这些结构可以使用MEL轻松解析。

对于这个JSON路径表达式的等价物：

[source,code]
----
$..[? (@.title=='Moby Dick')].price
----

以下使用过滤投影：

[source, xml, linenums]
----
<json:json-to-object-transformer returnClass="java.lang.Object" />
<expression-transformer
    expression='#[($.price in message.payload if $.title =='Moby Dick')[0]]" />
----

== 测试

* 如果来自HTTP侦听器的`lastname`查询字符串参数不是`null`，则返回`true`：
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.lastname != null]
----

* 返回`http.method`中元素的数量：
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.size()]
----

* 如果地图`http.query.params`中元素的数量大于50，则返回`true`：
+
[source, code]
----
#[message.inboundProperties.'http.query.params'.size() > 50]
----
+
*  *Testing for Emptiness*：特殊文字`empty`测试值的空白。它根据上下文返回一个空值。 `empty`计算结果为：+
** 空
** 布尔值`false`
** 空字符串或只包含空格的字符串
** 零
** 个空集合
+
如果`foo`值满足任何虚拟要求，则表达式`#[foo == empty]`的计算结果为true。 +
 +
**  *Testing for NullPayload*：如果消息有效负载为空，则返回true：
+
[source, code]
----
#[payload == null]
----

== 链接元素

对于链式方法或属性，即使在`c`为空值的情况下，表达式`#[[a.b.c] == 'foo']`也会正确评估。但是，如果`b`为空值，则表达式会抛出`NullPointerException`。

在此示例中，如果名为address的字段为空，则表达式会抛出`NullPointerException`。

[source, code]
----
#[payload.address.zipcode]
----

要使这个表达式`null`安全，请使用。？运营商。

[source, code]
----
#[payload.address.?zipcode]
----

如果地址是空值，则使用此运算符可避免`NullPointerException`，而返回`null`。

如果您希望表达式在未定义地址的情况下返回不同的值，则可以使用链接的`or`运算符。

[source, code]
----
#[payload.address.?zipcode or 'Zipcode not set']
----

== 全局配置

在全局配置元素中定义全局导入，别名和全局函数。可以从文件系统，URL或类路径资源加载全局函数（请参见下面第6行中的`extraFunctions.mvel`）。流变量自动绑定可以通过第2行中的autoResolveVariables属性关闭。

[source, xml, linenums]
----
<configuration>
  <expression-language autoResolveVariables="false">
    <import class="org.mule.util.StringUtils" />
    <import name="rsu" class="org.apache.commons.lang.RandomStringUtils" />
    <alias name="appName" expression="app.name" />
    <global-functions file="extraFunctions.mvel">
      def reversePayload() { StringUtils.reverse(payload) }
      def randomString(size) { rsu.randomAlphanumeric(size) }
    </global-functions>
  </expression-language>
</configuration>
----

== 高级提示

=== 访问缓存

您可以通过充当高速缓存存储库的对象存储来访问 link:/mule-user-guide/v/3.9/cache-scope[骡子缓存]。根据对象库的性质，您可以对条目进行计数，列表，删除或执行其他操作。

下面的代码显示了使用自定义对象存储类的缓存作用域的XML表示。

[source, xml, linenums]
----
<ee:object-store-caching-strategy name="CachingStrategy">
  <custom-object-storeclass="org.mule.util.store.SimpleMemoryObjectStore" />
</ee:object-store-caching-strategy>
----

上面的对象存储是`ListableObjectStore`的实现，它允许您获取它包含的条目的列表。您可以通过调用`app.registry`的`CachingStrategy`属性上的`getStore`方法来访问缓存内容。

下面的表达式通过调用返回可迭代列表的`allKeys()`来获得缓存的大小。

[source, code]
----
#[app.registry.CachingStrategy.getStore().allKeys().size()]"
----

如果您需要在Java类中操作注册表，则可以通过`muleContext.getRegistry()`来访问它。

=== 布尔操作陷阱

* 布尔评估有时会返回意外的响应，特别是当变量的值包含"garbage."时。请参阅下面的表格。
+
[%header,cols="34,33,33"]
|===
| *Expression*  | *When value of `var1` is...*  | *... The expression evaluates to...*
一个|
`#[var1 == true]`

  | `'true'`  | `true`
一个|
`#[var1 == true]`

  | `'True'` `'false'`  | `false`
一个|
`#[var1 == true]`
  | `'u5hsmg930'`  | `true`
|===
+
[%header,cols="4*"]
|===
| *Expression*  | *When the value of `something` is...*  | *... And the value of `abc` is...*  | *... MEL successfully evaluates the expression.*
| `#[payload.something.abc == 'b']`  | `'something'`  | `'null'`  |✔
| `#[payload.something.abc == 'b']`  | `'null'`  | `'abc'`  | *X* +
产生一个NullPointer异常
|===
+
还要注意的是，如果给定表达式`#[flowVars.abc.toString()]`且'`abc`'的值是`null`，则Mule会抛出`NullPointerException`。

其他操作== 

* 为变量`lastname`分配消息入站属性`lastname`的值：
+
[source, code]
----
#[lastname = message.inboundProperties.lastname]
----
+
* 将一个字符串附加到消息负载：
+
[source, code]
----
#[message.payload + 'mystring']
----
+
* 调用一个静态方法：
+
[source, code]
----
#[java.net.URLEncoder.encode()]
----
+
* 创建一个哈希映射：
+
[source, code]
----
#[new java.util.HashMap()]
----

== 更多MVEL善良

在MVEL（MVFLEX Expression Language）中，可以从github获得MVEL 2.0文档的快速访问。

*  *Java interoperability*  - 创建一个随机UUID并将其用作XSL-T参数：
+
[source, xml, linenums]
----
<mulexml:context-property key="transactionId"
         value="#[java.util.UUID.randomUUID().toString()]" />
----
+
*  *Safe bean property navigation*  - 仅当`name`对象不为空时才检索`fullName`：
+
[source, xml]
----
<set-variable variableName="fullName" value="#[message.payload.?name.fullName]" />
----
+
*  *Local variable assignment*  - 用于将多行有效负载拆分成行并删除第一行，如同在此拆分表达式中所示：
+
[source, code, linenums]
----
splitter expression='#[rows=StringUtils.split(message.payload,'\n\r');
         ArrayUtil.subarray(rows,1,rows.size())]" />
----
+
*  *Elvis operator*  - 返回值列表的第一个非空值：
+
[source, code]
----
#[message.payload.userName or message.payload.userId]
----
+
*Note:* Mule检查操作数是否为空，但当值设置为`null`时不会。
+
例如：
+
如果你设置`myop = ""`，Mule检测操作数为空。但是，如果您设置`myop = null`，Mule不会检测到
`myop`为空。

== 另请参阅

*  link:https://developer.mulesoft.com/anypoint-platform[骡社区版]
*  link:https://www.mulesoft.com/platform/studio[Anypoint Studio]
